<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Velos Android Theming</string>
    <string name="auto">Auto</string>
    <string name="bubblebeam">Bubblebeam</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="charmander">Charmander</string>
    <string name="cool_pokemon">This is a cool Pokémon!</string>
    <string name="day">Day</string>
    <string name="fire">Fire</string>
    <string name="flamethrower">Flamethrower</string>
    <string name="grass">Grass</string>
    <string name="night">Night</string>
    <string name="normal">Normal</string>
    <string name="number_format">#%1$s</string>
    <string name="signature_move_format">Signature Move: %1$s</string>
    <string name="squirtle">Squirtle</string>
    <string name="system">System</string>
    <string name="theme">Theme</string>
    <string name="type_format">Type: %1$s</string>
    <string name="vine_whip">Vine Whip</string>
    <string name="water">Water</string>

    <string name="bulbasaur_description">Bulbasaur is a small, quadruped Pokémon that has blue-green skin with darker green patches. It has red eyes with white pupils and scleras and pointed, ear-like structures on top of its head. Its snout is short and blunt, and it has a wide mouth. A pair of small, pointed teeth are visible in the upper jaw when its mouth is open. Each of its thick legs ends with three sharp claws. On its back is a green plant bulb, which is grown from a seed planted there at birth. The bulb provides it with energy through photosynthesis as well as from the nutrient-rich seeds contained within.</string>
    <string name="charmander_description">Charmander is a bipedal, reptilian Pokémon with a primarily orange body. Its underside from the chest down and soles are cream-colored. It has two small fangs visible in its upper jaw and two smaller fangs in its lower jaw. Charmander has blue eyes. Its arms and legs are short with four fingers and three clawed toes. A fire burns at the tip of this Pokémon\'s slender tail, and has blazed there since Charmander\'s birth. The flame can be used as an indication of Charmander's health and mood, burning brightly when the Pokémon is strong, weakly when it is exhausted, wavering when it is happy, and blazing when it is enraged. It is said that Charmander dies if its flame goes out. However, if the Pokémon is healthy, the flame will continue to burn if gets a bit wet and is said to steam in the rain.</string>
    <string name="squirtle_description">Squirtle is a small Pokémon that resembles a light blue turtle. While it typically walks on its two short legs, it has been shown to run on all fours in Super Smash Bros. Brawl. It has large eyes and a slightly hooked upper lip. Each of its hands and feet have three pointed digits. The end of its long tail curls inward. Its body is encased by a tough shell that forms and hardens after birth. This shell is brown on the top, pale yellow on the bottom, and has a thick white ridge between the two halves.</string>

</resources>
